tests/error/union_array_empty.gw
// [contains] array declaration must be empty in union
 union
{
  int i;
  int array[4];
};
